More tests of TGB for LP

--- a/notebooks/viz.ipynb
+++ b/notebooks/viz.ipynb
@@ -19,16 +19,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tada Data(edge_index=[2, 59835], edge_attr=[59835], ts=[59835], num_nodes=1899)\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt \n",
     "from sklearn.decomposition import PCA\n",
     "import torch\n",
+    "from models.optimized_tgb import BatchTGBase\n",
+    "from lp_test import generate_fold_daily_tg\n",
+    "from strgnn_loader import load_network_repo\n",
     "\n",
-    "tr_te = torch.load('StrGNN_Data/uci-tgb.pt')\n",
-    "te = tr_te['te']; ys = tr_te['y']; del tr_te "
+    "g = load_network_repo('uci')\n",
+    "_, gs = generate_fold_daily_tg(g)\n",
+    "#x = gs[-1].x\n",
+    "\n",
+    "#del g, gs \n",
+    "#x"
    ]
   },
   {
