Started working on sampling version of tgbase... kinda

--- a/notebooks/rnd_community.ipynb
+++ b/notebooks/rnd_community.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -44,17 +44,34 @@
      "text": [
       "mean\n",
       "d\tAccuracy\t\tPrecision\t\tRecall\n",
-      "2\t0.9508365097117294\t0.9899055036087204\t0.9109624997146966\n",
-      "4\t0.9587451213110264\t0.9913219908086438\t0.9255928605664985\n",
-      "8\t0.9507223883322301\t0.9843516224767604\t0.9160066646885627\n",
-      "16\t0.9417182114897404\t0.9685502614758861\t0.9130851573733824\n",
+      "2\t0.6289913952479858\t0.5951414959344119\t0.8068838016113938\n",
+      "4\t0.6315248898728688\t0.5973839420005745\t0.8068153287836943\n",
+      "8\t0.6314450049072193\t0.5975473423896474\t0.8051948051948052\n",
+      "16\t0.6315134777349188\t0.5977670693633772\t0.8040992399516126\n",
+      "32\t0.6304635610435259\t0.5972704376829351\t0.8010864355328328\n",
+      "64\t0.6324949215986123\t0.5982299986462705\t0.8069066258872937\n",
+      "128\t0.6290142195238856\t0.5956899324541653\t0.803140620363819\n",
       "\n",
       "sum\n",
       "d\tAccuracy\t\tPrecision\t\tRecall\n",
-      "2\t0.9400748636249515\t0.9685540704738761\t0.9096843402643051\n",
-      "4\t0.9323716705087531\t0.9585582532497398\t0.9038185013580444\n",
-      "8\t0.925524387738799\t0.9487543627391984\t0.8996416588683724\n",
-      "16\t"
+      "2\t0.62238376737498\t0.5878411585465745\t0.8190034921142126\n",
+      "4\t0.6239129938602698\t0.5893015758134026\t0.8177025083879214\n",
+      "8\t0.6231940291694246\t0.5887119307069014\t0.8175427384566225\n",
+      "16\t0.623273914135074\t0.589107767438791\t0.8149864195558396\n",
+      "32\t0.623582041859722\t0.5898388889810682\t0.8113801839636637\n",
+      "64\t0.6237874603428206\t0.5896342571933826\t0.8143016912788442\n",
+      "128\t0.6245406614475156\t0.5903229544288292\t0.8139593271403465\n",
+      "\n",
+      "max\n",
+      "d\tAccuracy\t\tPrecision\t\tRecall\n",
+      "2\t0.6183324584027572\t0.5852223226760911\t0.8125898705863557\n",
+      "4\t0.621641978408235\t0.5876980796761613\t0.8151690137630384\n",
+      "8\t0.6241640608951681\t0.5896949711459192\t0.8163102275580307\n",
+      "16\t0.6228288407550271\t0.5895707461593516\t0.8084815009243832\n",
+      "32\t0.6257161116563577\t0.5929243850592165\t0.8021591765001256\n",
+      "64\t0.6262981306918038\t0.592730380574129\t0.8072946385775911\n",
+      "128\t0.6300070755255289\t0.5959665734407117\t0.8073631114052907\n",
+      "\n"
      ]
     }
    ],
@@ -67,24 +84,15 @@
     "    )[:g.num_nodes]\n",
     "    rnd_x = rnd_x[torch.randperm(rnd_x.size(0))]\n",
     "    \n",
-    "    #rnd_x = torch.rand(g.num_nodes,d)\n",
+    "    rnd_x = torch.rand(g.num_nodes,d)\n",
     "\n",
     "    ei = g.edge_index[:, g.edge_index.size(1)//2:]\n",
     "    te_ei = g.edge_index[:, :g.edge_index.size(1)//2]\n",
     "\n",
     "    mp = MessagePassing(aggr=aggr)\n",
-    "    one_hop = torch.cat([\n",
-    "        mp.propagate(g.edge_index, size=None, x=rnd_x),\n",
-    "        mp.propagate(g.edge_index[[1,0]], size=None, x=rnd_x),\n",
-    "    ], dim=1)\n",
-    "    two_hops = torch.cat([\n",
-    "        mp.propagate(g.edge_index, size=None, x=one_hop),\n",
-    "        mp.propagate(g.edge_index[[1,0]], size=None, x=one_hop),\n",
-    "    ], dim=1)\n",
-    "    three_hops = torch.cat([\n",
-    "        mp.propagate(g.edge_index, size=None, x=two_hops),\n",
-    "        mp.propagate(g.edge_index[[1,0]], size=None, x=two_hops),\n",
-    "    ], dim=1)\n",
+    "    one_hop = mp.propagate(ei, size=None, x=rnd_x)\n",
+    "    two_hops = mp.propagate(ei, size=None, x=one_hop)\n",
+    "    three_hops = mp.propagate(ei, size=None, x=two_hops)\n",
     "\n",
     "    x = torch.cat([one_hop,two_hops,three_hops], dim=1)\n",
     "    edges = torch.cat([x[ei[0]], x[ei[1]]], dim=1)\n",
@@ -119,7 +127,7 @@
     "for a in ['mean', 'sum', 'max']:\n",
     "    print(a)\n",
     "    print(\"d\\tAccuracy\\t\\tPrecision\\t\\tRecall\")\n",
-    "    for d in [2,4,8,16]:\n",
+    "    for d in [2,4,8,16,32,64,128]:\n",
     "        print(str(d)+'\\t', end='')\n",
     "        test_nonparam_lp(d, aggr=a)\n",
     "\n",
